--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
     "vue": "^2.3.3",
-    "vue-router": "^2.3.1"
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.3.1",
+    "vuefire": "^1.4.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
