--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
-    "vuefire": "^1.4.3"
+    "vuefire": "^1.4.3",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
