--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
+    "vee-validate": "^2.0.0-rc.7",
     "vue": "^2.3.3",
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
