--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "chart.js": "^2.6.0",
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
     "vee-validate": "^2.0.0-rc.8",
     "vue": "^2.3.3",
+    "vue-chartjs": "^2.8.1",
     "vue-router": "^2.3.1",
     "vuefire": "^1.4.3",
     "vuex": "^2.3.1"
