--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^2.6.0",
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
+    "moment": "^2.18.1",
     "vee-validate": "^2.0.0-rc.8",
     "vue": "^2.3.3",
     "vue-chartjs": "^2.8.1",
