--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "blueimp-md5": "^2.10.0",
     "chart.js": "^2.6.0",
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
