--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,7 +13,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/?launcher=true",
+  "start_url": "./index.html?launcher=true",
   "display": "standalone",
   "background_color": "#FF5722",
   "theme_color": "#E64A19"
