--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-polyfill": "^6.26.0",
     "blueimp-md5": "^2.10.0",
     "chart.js": "^2.7.0",
+    "fingerprintjs2": "^1.5.1",
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
     "moment": "^2.18.1",
