--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "firebase": "^4.1.3",
     "material-design-lite": "^1.3.0",
     "moment": "^2.18.1",
-    "vee-validate": "^2.0.0-rc.8",
+    "vee-validate": "^2.0.3",
     "vue": "^2.4.4",
     "vue-chartjs": "^2.8.7",
     "vue-router": "^2.3.1",
