--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
 branches:
    only:
       - master
+      - develop
 
 cache:
   directories:
@@ -20,4 +21,5 @@ script:
    - npm run build
 
 after_success:
-   - firebase deploy --token $FIREBASE_TOKEN
+   - if [ "$TRAVIS_BRANCH" == "master" ]; then firebase deploy --token $FIREBASE_TOKEN --project production; fi
+   - if [ "$TRAVIS_BRANCH" == "develop" ]; then firebase deploy --token $FIREBASE_TOKEN --project pprod; fi
