--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "node build/dev-server.js",
     "start": "node build/dev-server.js",
     "build": "node build/build.js",
+    "pprod-build": "node build/build-pprod.js",
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
