--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "sass-loader": "^6.0.6",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "string-replace-loader": "^2.1.1",
     "sw-precache-webpack-plugin": "^0.9.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^12.2.2",
