--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "chart.js": "^2.7.0",
     "fingerprintjs2": "^1.5.1",
     "firebase": "^4.1.3",
+    "konva": "^2.0.2",
     "material-design-lite": "^1.3.0",
     "moment": "^2.18.1",
     "vee-validate": "^2.0.3",
     "vue": "^2.4.4",
     "vue-chartjs": "^2.8.7",
+    "vue-konva": "^1.0.5",
     "vue-router": "^2.3.1",
     "vuex": "^2.3.1"
   },
